[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "http-auditor-ultra"
version = "2.0.1"
description = "Advanced HTTP auditing & reconnaissance framework for authorized security assessments"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [{name = "HackerAI"}]
keywords = ["security", "auditing", "http", "reconnaissance", "pentesting", "waf-detection", "tls"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.28.0,<1.0.0",
    "pyyaml>=6.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.10",
    "ruff>=0.5.0",
    "respx>=0.21.0",
]

[project.scripts]
http-auditor-ultra = "http_auditor_ultra.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["http_auditor_ultra*"]

[tool.setuptools.package-data]
"http_auditor_ultra" = ["data/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["http_auditor_ultra"]
omit = ["*/tests/*"]
