[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "http-auditor-ultra"
version = "3.0.0"
description = "Advanced HTTP auditing & reconnaissance framework — WAF detection, TLS audit, subdomain enum, port scan"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "jurai_mughal", email = "juraijmughal378@gmail.com"}]
keywords = ["security", "auditing", "http", "waf-detection", "tls", "reconnaissance", "pentesting", "subdomain"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.28.0,<1.0.0",
    "pyyaml>=6.0",
    "cryptography>=42.0.0",
]

[project.urls]
Homepage = "https://github.com/juraijmughal378-png/http-auditor-ultra"
Repository = "https://github.com/juraijmughal378-png/http-auditor-ultra"
"Bug Tracker" = "https://github.com/juraijmughal378-png/http-auditor-ultra/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.10",
    "ruff>=0.5.0",
    "respx>=0.21.0",
]

[project.scripts]
http-auditor-ultra = "http_auditor_ultra.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["http_auditor_ultra*"]

[tool.setuptools.package-data]
"http_auditor_ultra" = ["data/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["http_auditor_ultra"]
omit = ["*/tests/*"]

[tool.ruff]
target-version = "py312"
line-length = 100
